	   status, then enjoy one email report from all hosts, rather than multiple
    backupninja changes
	 . Fixed checks on configuration files permissions, since the patch
	   applied to fix #370396 broke this, especially for configuration files
	   created with permissions 000 by an older ninjahelper version.
	 . Enhanced portability for other platforms
	 . Fixed Trac#11 (quoting needed to prevent shell expansion, broke the
           toint function sometimes)
	 . Fixed reportspace option (Trac#10)
    handler changes
	dup:
	 . Support duplicity >= 0.4.3 invocation syntax (--ssh-command option
	   is not supported anymore)
        ldap:
	 . Fixed shell command quoting issues, missing 'then' clauses, cleaned up
	   compress=yes to be less redundant and not create empty uncompressed
	   file (Closes: #394935)
        mysql:
	 . Fixed case where odd combination of configuration options caused sqldump
	   backups to get overwritten with an empty file (Closes: #402679)
	 . Added 'nodata' option to enable you to specify tables that you want to omit
	   the data from a backup, but still backup the table structure. This is very
	   useful in cases where tables contain large amounts of cache data. See the
	   example.mysql for options, thanks Daniel Bonniot (Closes: #408829)
	 . Enhance code for selecting databases by asking MySQL not to give us the 
	   header (-N), to not draw pretty boxes around the output (-B), send the query 
	   via -e instead of a pipe and ensure MySQL listens to -B. Thanks to
	   Matthew Palmer (Closes: #452039).
	pgsql:
	 . Support configuring PGSQLUSER for real, and document it a bit; this
	   broken support actually prevented pgsql handler to work for VServers
	   (Closes: #396578)
	rdiff-backup:
	 . Added cstream support to allow for bandwidth limiting
	 . Handle "keep = yes" to disable old backups removal (Closes: #424633)
	 . Add configuration option to allow you to disable the version check